--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
@@ -24,7 +25,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+        "app/helpers.php"
+    ]
     },
     "autoload-dev": {
         "psr-4": {
